src/stylus/blocks/_navigation.styl
.navigation
  position fixed
  top 0
  left 0
  width 100%
  z-index: 10000
  // background-color: black // DELETE
  padding-top 2.2rem
  padding-bottom: 2px
  transition .5s
  &__wrapper
    display flex
    justify-content: space-between
    align-items: center
    width 131rem
    margin 0 auto
  &__logo
    flex-shrink: 0
    & img
      height 6.4rem
  &__callback
    flex-shrink: 0

.menu
  display flex
  justify-content: space-between
  flex-grow: 1
  font-family: 'Open Sans'
  max-width: 62rem
  &__link
    font-size:  1.6rem
    color white
    transition: .3s
    &:hover
      color: #60C3FE

